--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     }
   },
   "dependencies": {
-    "@babel/preset-react": "^7.12.10"
+    "@babel/preset-react": "^7.12.10",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   }
 }
