--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   },
   "dependencies": {
     "@babel/preset-react": "^7.12.10",
+    "clock.js": "^1.1.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   }
