--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/core": "^7.12.10",
     "@babel/eslint-parser": "^7.12.1",
     "@becode/eslint-config": "^0.12.1",
+    "cssnano": "^4.1.10",
     "eslint": "^7.18.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
