--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "parcel build index.html"
+    "build": "parcel build src/index.html"
   },
   "repository": {
     "type": "git",
@@ -29,7 +29,6 @@
     "eslint-plugin-unicorn": "^27.0.0",
     "husky": "^4.3.8",
     "lint-staged": "^10.5.3",
-    "parcel-bundler": "^1.12.4",
     "prettier": "^2.2.1"
   },
   "lint-staged": {
