verifying deploy settings

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "clock.js": "^1.1.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "sound": "^2.7.0",
     "time.js": "^0.0.1"
   }
 }
